# Python-drf

./: .env.example  .gitignore  pyproject.toml  setup.cfg
apps/pizza/: filter.py  models.py  serialaizers.py  urls.py  views.py
apps/pizza/migrations/: 0001_initial.py  0002_pizzamodel_pizza_shop.py  0003_pizzamodel_day_alter_pizzamodel_pizza_shop.py  0004_alter_pizzamodel_name_alter_pizzamodel_size.py
apps/pizza_shop/: models.py  serializer.py  urls.py  views.py
apps/pizza_shop/migrations/: 0001_initial.py
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/: pagination.py
core/enums/: regex_enum.py
